miks suggestions through to end

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -42,7 +42,7 @@ Common methodologies of genotyping, to determine the genetic variation of an ind
 Charles @darwin1909origin in The Origin of Species declared: _“[The] preservation of favourable individual differences and variations, and the destruction of those which are injurious, I have called Natural Selection or Survival of the Fittest. Variations neither useful or injurious would not be affected by natural selection, and would be left either a fluctuating element, as perhaps we see in certain polymorphic species, or would ultimately become fixed, owing to the nature of the organism and the nature of the conditions.”_ This theory set the scene for research in population biology. Selection acts upon the phenotype and this pressure then transfers through to act upon the genetic make-up of that phenotype. Most important to Darwin’s Theory was it created models for what natural selection should look like and the methods for being able to detect selective events on the genetics of organisms. A focus on selection in humans has added insight into past events since migration out of Africa [@Soares2012] and yielded possibilities of the influences on human disease.
 
 
-## Neutrality and genetic drift
+### Neutrality and genetic drift
 
 The random sampling of alleles can cause an increase or decrease in allele frequency of a population leading to genetic drift. @Wright1931 proposed genetic drift as an evolutionary model. He put forward that by chance, in a finite population without selection acting, an allele could increase in frequency over generations and time, changing significantly from the original frequency values. Fisher believed that “Natural Selection depends on the succession of favourable chances”, and thought that genetic drift was insignificant compared to selection [@Fisher1930]. In Fisher's model, genetic variation would disappear at an extremely slow rate in a population without selection, and a moderate rate of new mutations would be enough to maintain the population variability [@Fisher1922]. @Feller1951 unified the population models from both Wright and Fisher into what is now known as the Wright-Fisher model. The Wright-Fisher model in its simplest form treats a diploid population of size $N$ as a haploid population of $2N$. In unifying the population models Feller noted that the assumption of constant population size contributes more than was previously thought, and this had been crucial in Wright’s model for gene frequency to satisfy a diffusion equation.
 
@@ -52,7 +52,7 @@ Crucial to both the neutral theory and the theory of natural selection is the es
 
 Natural selection seems to be the more popular model to the neutral hypothesis, however the methodology for detecting selection utilises the neutral hypothesis for many of the methods mentioned later (section \@ref(selMethods)). These methods use a model for neutrality, and if the statistic reaches a level that is considered to be beyond that of the neutral model, the model is rejected. Typically the neutral hypothesis is a composite hypothesis using assumptions for which it would be difficult to find a human population that fulfils them, such as: “the population is in equilibrium at constant size with no population subdivision or gene flow from other populations” [@Nielsen2005a].
 
-## Selection
+### Selection
 
 Possible types of selection that can act upon a population include balancing, background, or directional selection. Balancing selection maintains both alleles in a population and is often the case when the heterozygote has an advantage over the homozygote and can be referred to as "over-dominant selection". An two examples of this is MHC class 1 [@Hughes1988] and sickle-cell anaemia [@Allison1956]. With sickle-cell anaemia, individuals homozygous for normal haemoglobin alpha are susceptible to malaria, individuals homozygote for the 'sickling' mutation develop sickle-cell disease, and the heterozygote has a protective effect against malarial infection [Aidoo2002]. "Background selection" is a reduction of genetic diversity at a locus because of deleterious selection acting on a separate but linked locus [@Charlesworth1993]. Background selection can be thought of as the opposite effect to genetic hitch-hiking. Genetic hitch-hiking occurs when a locus is under selection, linked sites on the same chromosome will increase in frequency, causing a change in frequency of the alleles that are not on the same chromosome [@Smith1974]. \Gls{ld} can arise at sites that are under directional selection, even when the loci are unlinked [@Felsenstein1965] but, recombination will act to reduce this \gls{ld}. 
 
@@ -140,7 +140,7 @@ Since 2005 there have been multiple reviews published (see @Nielsen2005, @sabeti
 <!-- make sure to update so that it includes the statistics used -->
 
 
-The different methods for detecting selection work best over different time periods. Recent soft sweeps are able to be detected well with \gls{ld}-based methods, but frequency spectrum tests struggle [@Hermisson2005]. The opposite applies in the case of hard sweeps [@Hermisson2005]. In humans, the method that is able to detect the most ancient selection, ranging to millions of years ago is the Ka/Ks ratio, however if a strong background of neutrality is present this can undermine the effectiveness of the test. \Gls{td} is able to detect selection events as old as 250,000 years ago in regions of low diversity containing and excess of rare alleles. \Gls{fwh} is able to detect events less than 80,000 years ago based on derived alleles having arisen through mutation and then risen to a high frequency via hitch-hiking. F~ST~, in the range of less than 50,000 to 70,000 years ago, picks up geographic separation of populations that have been subject to different physical and cultural environments based on the changes in allele frequency in one population versus another. Methods relying on long haplotypes such as \gls{ihs} have the shortest range at less than 30,000 years ago for a long haplotype that hasn't had time to break down through recombination and contains a high frequency variant. Partial sweeps can also be detected down to a \gls{maf} of approximately 10% [@sabeti2006positive].
+The different methods for detecting selection work best over different time periods. Recent soft sweeps are able to be detected well with \gls{ld}-based methods, but frequency spectrum tests struggle [@Hermisson2005]. The opposite applies in the case of hard sweeps [@Hermisson2005]. In humans, the method that is able to detect the most ancient selection, ranging to millions of years ago is the K~a~/K~s~ ratio, however if a strong background of neutrality is present this can undermine the effectiveness of the test. \Gls{td} is able to detect selection events as old as 250,000 years ago in regions of low diversity containing and excess of rare alleles. \Gls{fwh} is able to detect events less than 80,000 years ago based on derived alleles having arisen through mutation and then risen to a high frequency via hitch-hiking. F~ST~, in the range of less than 50,000 to 70,000 years ago, picks up geographic separation of populations that have been subject to different physical and cultural environments based on the changes in allele frequency in one population versus another. Methods relying on long haplotypes such as \gls{ihs} have the shortest range at less than 30,000 years ago for a long haplotype that hasn't had time to break down through recombination and contains a high frequency variant. Partial sweeps can also be detected down to a \gls{maf} of approximately 10% [@sabeti2006positive].
 
 ```{r, eval = TRUE, echo = FALSE}
 tibble(
@@ -154,7 +154,7 @@ tibble(
 ### Macroevolutionary methods
 
 #### K~a~/K~s~
-The ratio of non-synonymous to synonymous mutations is called the K~a~/K~s~ ratio (or dN/dS ratio as it is often referred to), and is used to infer functional impact from selection, since synonymous mutations are thought of as silent mutations with a neutral effect on the protein [@Hughes1988]. Comparing the baseline rate of mutation (synonymous) to the non-synonymous rate gives an understanding of the tolerance of amino acid alternatives in the protein, with an excess of non-synonymous mutations indicating the novel protein structures are being favoured and the protein is being positively selected for. A Ka/Ks ratio greater than 1 is indicative of positive selection, while a value less than 1 is indicative of negative selection against deleterious mutations and for keeping the protein conserved.
+The ratio of non-synonymous to synonymous mutations is called the K~a~/K~s~ ratio (or d~N~/d~S~ ratio as it is often referred to), and is used to infer functional impact from selection, since synonymous mutations are thought of as silent mutations with a neutral effect on the protein [@Hughes1988]. Comparing the baseline rate of mutation (synonymous) to the non-synonymous rate gives an understanding of the tolerance of amino acid alternatives in the protein, with an excess of non-synonymous mutations indicating the novel protein structures are being favoured and the protein is being positively selected for. A K~a~/K~s~ ratio greater than 1 is indicative of positive selection, while a value less than 1 is indicative of negative selection against deleterious mutations and for keeping the protein conserved.
 
 #### HKA
 
@@ -213,7 +213,7 @@ The frequency spectrum methods are based on finding deviations in the frequency 
 
 #### Fay and Wu's _H_
 
-\gls{fwh} is sensitive to \glspl{snp} rising to moderate to high frequency and uses an out group (such as the ancestral reference sequence) to determine the derived/ancestral state of the allele. A positive value indicates a deficit in derived moderate to high frequency \glspl{snp}. A negative value indicates an excess of derived moderate to high frequency \glspl{snp}. \Gls{fwh} rejects neutrality when there is an excess of high but not low frequency variants. An increase in the proportion of high frequency variants compared to intermediate frequency variants is a unique signature of positive selection [@fay2000hitchhiking]. \Gls{fwh} can be used in regions of low recombination to distinguish hitch-hiking from neutral or background selection where it is expected there will be the same level of intermediate to high frequency variants.
+\gls{fwh} is sensitive to \glspl{snp} rising to moderate to high frequency and uses an out-group (such as the ancestral reference sequence) to determine the derived/ancestral state of the allele. A positive value indicates a deficit in derived moderate to high frequency \glspl{snp}. A negative value indicates an excess of derived moderate to high frequency \glspl{snp}. \Gls{fwh} rejects neutrality when there is an excess of high but not low frequency variants. An increase in the proportion of high frequency variants compared to intermediate frequency variants is a unique signature of positive selection [@fay2000hitchhiking]. \Gls{fwh} can be used in regions of low recombination to distinguish hitch-hiking from neutral or background selection where it is expected there will be the same level of intermediate to high frequency variants.
 
 #### Zeng's E
 
@@ -292,7 +292,7 @@ the use of whole genome re-sequencing [@Albrechtsen2010].
 
 Many of these statistics were developed to investigate selection at a particular locus, at a time when applying the statistics across a genome was not possible. Up until recently, genome scans have been performed using \gls{snp} genotypes identified through a \gls{snp} discovery process, which means they are not random samples – which would include non \gls{snp} genotypes (such as \glspl{indel}) and create an ascertainment bias [@Nielsen2005a]
 
-Identification of exactly what is deemed as being "significantly selected"" has issues. The current practice is to take outlier loci, usually from an empirical distribution of the selection statistic and report these as significant. This is not necessarily indicative of selection, as cut off levels are created subjectively rather than derived from the model [@Qanbari2012a]. Using an empirical approach will result in many false positives, however this is considered an acceptable approach for selecting candidate genes so long as it is realised taht the false positive rate is high [@Kelley2006].
+Identification of exactly what is deemed as being "significantly selected"" has issues. The current practice is to take outlier loci, usually from an empirical distribution of the selection statistic and report these as significant. This is not necessarily indicative of selection, as cut off levels are created subjectively rather than derived from the model [@Qanbari2012a]. Using an empirical approach will result in many false positives, however this is considered an acceptable approach for selecting candidate genes so long as it is realised that the false positive rate is high [@Kelley2006].
 
 In order to use haplotypic methods, (re)construction of haplotypes is required. Currently this involves the need for the phasing of haplotypes from genomic data. Phasing is the process of determining which alleles are found together on the same physical chromosomes. There are a number of ways that this can be done, such as through a pedigree, through the use of large population data, or using the reads from next generation sequencing. Phasing through pedigree information is utilised in most agricultural species, whereas for human populations the population genotypes are largely from unrelated individuals. Phasing of unrelated individuals currently relies on probabilistic methods [@Browning2009; @Delaneau2012; @Delaneau2013] in order to make the best guess at each individual haplotype. Newer methods have been developed to use the reads from next generation sequencing, and are able to trace a haplotype across multiple overlapping reads, however these methods are heavily dependent on the depth of coverage. The read-backed phasing can also be used to complement probabilistic phasing methods.
 
@@ -322,11 +322,11 @@ Explained heritability is defined as the proportion of heritability (or phenotyp
 
 ### Selection and GWAS
 
-Significance of \gls{gwas} results is greatly increased when selection statistics and association studies are combined, this has been applied in a \gls{gwas} for malarial resistance variants [@Ayodo2007]. A smaller sample size can be used if there is evidence of positive selection because the beneficial allele will rise in prevalence, and will be in high \gls{ld} with other variants (due to genetic hitch-hiking) which can act as proxy markers [@Karlsson2014]. Complex disease traits compared to Mendelian disease associated traits have a bias towards larger mouse-human Ka/Ks ratios, by comparing the Ka/Ks ratios for ortholog genes between mouse and human, which suggests that evidence of positive selection could be utilised in identifying variation associated with complex disease [@Thomas2004].
+Significance of \gls{gwas} results is greatly increased when selection statistics and association studies are combined, this has been applied in a \gls{gwas} for malarial resistance variants [@Ayodo2007]. A smaller sample size can be used if there is evidence of positive selection because the beneficial allele will rise in prevalence, and will be in high \gls{ld} with other variants (due to genetic hitch-hiking) which can act as proxy markers [@Karlsson2014]. Complex disease traits compared to Mendelian disease associated traits have a bias towards larger mouse-human K~a~/K~s~ ratios, by comparing the K~a~/K~s~ ratios for ortholog genes between mouse and human, which suggests that evidence of positive selection could be utilised in identifying variation associated with complex disease [@Thomas2004].
 
 ### Pathway analysis
 
-A biological pathway is a dependency graph detailing the genes or proteins involved in a series of biochemical reactions, such as a metabolic pathway like the Crebs cycle. There are curated databases of many of the biological pathways used by living organisms, such as \gls{kegg} [@Kanehisa2017] or Reactome [@Fabregat2018]. Pathways have been hypothesised to be involved in the genic adaptation of populations since altering a gene in a biochemical pathway are likely to alter different genes in the same pathway [@Bigham2010].  The use of pathway analysis rather than focusing on individual \glspl{snp} is another way to increase the power of a \gls{gwas} [@Jia2011]. This increase in power is largely obtained through a reduction in dimensionality in ways that attempt to remove noise from the underlying biological signal. There are however limitations to the effectiveness of using such an approach, such as the selection of pathway database, density of \glspl{snp} per gene, or gene length and boundaries. Pathway database is important because pathways can differ based on curator, age of the database - with older databases not incorporating current knowledge, or differing focuses. \Glspl{snp} per gene, and gene length or boundaries all affect the pathway analysis as smaller genes or \gls{snp} density reduces the observations for the gene compared to large genes or genes with high \gls{snp} density. Pathways that involve many large genes also have a higher chance of a \gls{snp} having an extreme statistic value under a null model, because overall they are more likely to have more \glspl{snp} than pathways containing small length genes.
+A biological pathway is a dependency graph detailing the genes or proteins involved in a series of biochemical reactions, such as a metabolic pathway like the Krebs cycle. There are curated databases of many of the biological pathways used by living organisms, such as \gls{kegg} [@Kanehisa2017] or Reactome [@Fabregat2018]. Pathways have been hypothesised to be involved in the genic adaptation of populations since altering a gene in a biochemical pathway are likely to alter different genes in the same pathway [@Bigham2010].  The use of pathway analysis rather than focusing on individual \glspl{snp} is another way to increase the power of a \gls{gwas} [@Jia2011]. This increase in power is largely obtained through a reduction in dimensionality in ways that attempt to remove noise from the underlying biological signal. There are however limitations to the effectiveness of using such an approach, such as the selection of pathway database, density of \glspl{snp} per gene, or gene length and boundaries. Pathway database is important because pathways can differ based on curator, age of the database - with older databases not incorporating current knowledge, or differing focuses. \Glspl{snp} per gene, and gene length or boundaries all affect the pathway analysis as smaller genes or \gls{snp} density reduces the observations for the gene compared to large genes or genes with high \gls{snp} density. Pathways that involve many large genes also have a higher chance of a \gls{snp} having an extreme statistic value under a null model, because overall they are more likely to have more \glspl{snp} than pathways containing small length genes.
 
 ## Applications
 
@@ -334,13 +334,13 @@ A biological pathway is a dependency graph detailing the genes or proteins invol
 
 Genome wide selection in humans has been investigated by @sabeti2006positive, @pickrell2009signals,@voight2006map, @Hancock2008, the 1000 Genomes Project Consortium [@1KGP2010;@1KGP2012;@1KGP2015snp], @Grossman2010, @Colonna2014, and @Mallick2016. The population datasets used involved the HapMap Project [@Hapmap2005], the Human Genome Diversity Project [@Cann2002; @Rosenburg2002] and the 1000 Genomes Project (populations are defined in section \@ref(datasets); @1KGP2010). The 1000 Genomes Project Consortium [@1KGP2010; @1KGP2012; @1KGP2015snp] reported genome wide diversification between main population groups based on F~ST~ and \gls{ddaf}. Genome wide mean F~ST~ was found to only be a maximum of 8%, indicating overall little genetic differentiation between populations, however several thousand SNPs had large F~ST~ indicating local population adaptation [@1KGP2010]. The analysis also found 139 non-synonymous SNPs with large frequency differences between populations. Investigation of the \gls{1kgp} data set was also performed by @Colonna2014. Using \gls{ddaf}, it was found that sites of high population differentiation (\gls{ddaf} > 0.7 between and > 0.25 within continents) clustered together, the same was found for sites of low differentiation. Genes containing highly differentiated sites were likely to also have additional evidence of positive selection in a third. There was also a high association of highly differentiated sites with genes and gene regulatory elements.
 
-Metabolic syndrome and gout have associations and interactions with genes in metabolic pathways and the immune system [@Osborn2012]. The categories of genes that have displayed eveidence of selection from the previously mentioned genome-wide selection scans include: metabolism of sugars [@tang2007new; @voight2006map], drug metabolism [@tang2007new], immune system [@Grossman2010; @tang2007new], and climate adaptation [@Hancock2008]. Genes that play a role in adaptation to climate extremes are likely to play a role in metabolic disorders that make up metabolic syndrome [@Hancock2008]. In contrast, variation in metabolic related genes can lead to elite phenotypes in athletes, showing that metabolic genes also impact on fitness [@Ahmetov2009a].
+Metabolic syndrome and gout have associations and interactions with genes in metabolic pathways and the immune system [@Osborn2012]. The categories of genes that have displayed evidence of selection from the previously mentioned genome-wide selection scans include: metabolism of sugars [@tang2007new; @voight2006map], drug metabolism [@tang2007new], immune system [@Grossman2010; @tang2007new], and climate adaptation [@Hancock2008]. Genes that play a role in adaptation to climate extremes are likely to play a role in metabolic disorders that make up metabolic syndrome [@Hancock2008]. In contrast, variation in metabolic related genes can lead to elite phenotypes in athletes, showing that metabolic genes also impact on fitness [@Ahmetov2009a].
 
 #### Selection in Polynesia
 
 The inclusion of Oceanic populations in multi-population studies has had a focus on genetic structure, measured via F~ST~ for differentiation to investigate population ancestry, rather than selection [@Friedlaender2008; @Tennessen2011]. The migratory history of Polynesian populations suggests that the points of differentiation are likely the events possibly occurring since the out of Africa dispersal ~60,000 years ago [@Soares2012] with settlement of Near Oceania ~40,000 years ago, and Remote Oceania ~3,100 years ago [@Matisoo-Smith2004] and the Polynesian Triangle (bounded by New Zealand, Easter Island, and Hawaii) ~1,000-1,200 years ago [@Wilmshurst2011]. The time frame for these events means that nearly all of the previously mentioned methods would still be within their powered time frames to detect selective events. The haplotypic methods would possibly not be able to detect selective events as old as the Africa dispersal and may be at the fringe of the time period for the Near Oceania settlement. 
 
-Large population comparison studies have used Oceanic populations, but analyses were limited to Melanesians and Papuan populations because the cohort used was the Human Genome Diversity Project [@Cann2002] which didn't include Polynesian populations. The Melanesian and Papuan populations are often used to infer the genetics of Polynesian populations. This extrapolation doesn't take into account the current ancestry predictions of Polynesians populations being more closely related to Asian/Taiwanese Aboriginal populations than Melanesian groups, and the presence of European admixture [@Friedlaender2008]. The genomic DNA and mitochondrial DNA suggest Polynesians have East Asian ancestry, with substantial male Melanesian admixture [@Kayser2008a]. There has been limited analysis of selection in Polynesian populations beyond @Kimura2008, where 24 Tongan samples in conjunction with other populations were analysed using both F~ST~ and a modified \gls{ehh} test. Genomic regions with evidence of having been selected in the Tongans were potential candidates for increased fat, muscle and bone masses [@Kimura2008].
+Large population comparison studies have used Oceanic populations, but analyses were limited to Melanesian and Papuan populations because the cohort used was the Human Genome Diversity Project [@Cann2002] which didn't include Polynesian populations. The Melanesian and Papuan populations are often used to infer the genetics of Polynesian populations. This extrapolation doesn't take into account the current ancestry predictions of Polynesians populations being more closely related to Asian/Taiwanese Aboriginal populations than Melanesian groups, and the presence of European admixture [@Friedlaender2008]. The genomic DNA and mitochondrial DNA suggest Polynesians have East Asian ancestry, with substantial male Melanesian admixture [@Kayser2008a]. There has been limited analysis of selection in Polynesian populations beyond @Kimura2008, where 24 Tongan samples in conjunction with other populations were analysed using both F~ST~ and a modified \gls{ehh} test. Genomic regions with evidence of having been selected in the Tongans were potential candidates for increased fat, muscle and bone masses [@Kimura2008].
 
 A few candidate-genes for selection which also have associated with obesity and \gls{t2d} in Polynesian populations have been investigated, such as the _PPARGC1A_ [@Myles2011] and _CREBRF_ [@Minster2016]. The "Thrifty-gene hypothesis" [@Neel1962] has been the reasoning behind why these loci may have undergone selection. The hypothesis was originally conceived to attempt to explain the difference in prevalence of \gls{t2d} given that there should be a strong selective pressure against it, there must be some genetic advantage. This hypothesis has been challenged in the Polynesian context as being 'just-so' stories [@Gosling2014; @Gosling2015; @Cadzow2016] with an alternative hypothesis being a link between the metabolic diseases and the innate immune system that is under selective pressure via an infectious agent, such as malaria, leading to disease susceptibility in these populations [@Gosling2015].
 
@@ -349,13 +349,13 @@ A few candidate-genes for selection which also have associated with obesity and 
 
 <!-- XXX fix this section -->
 
-The genetic influence of urate and gout is found in the under-excretion of serum urate. There are 28 loci that have been identified as having a role in \gls{hu} and gout, of which, two (_ABCG2_ and _SLC2A9_) are responsible 3.4% of the variability of urate [@Kottgen2013]. _SLC2A9_ encodes a urate transporter expressed on both the apical and baso-lateral membranes in the proximal tubule of the kidney and reabsorbs urate [@Mandal2015]. _ABCG2_ encodes an ATP powered urate transporter and is responsible for urate excretion mostly in the gut [@Maliepaard2001; Mandal2015]. Twenty six other loci associated with serum urate explain a further 3.6% of the variance [@Kottgen2013]. The heritability of serum uric acid ranges from 40 - 70% [@Nath2007; @Yang2005]. This difference in explained variability and total heritability leaves a large component yet to be explained. This missing heritability could be reduced through identifying additional variance attributed to non-additive effects.
+The genetic influence of urate and gout is found in the under-excretion of serum urate. There are 28 loci that have been identified as having a role in \gls{hu} and gout, of which, two (_ABCG2_ and _SLC2A9_) are responsible 3.4% of the variability of urate [@Kottgen2013]. _SLC2A9_ encodes a urate transporter expressed on both the apical and baso-lateral membranes in the proximal tubule of the kidney and reabsorbs urate [@Mandal2015]. _ABCG2_ encodes an ATP powered urate transporter and is responsible for urate excretion mostly in the gut [@Maliepaard2001; @Mandal2015]. Twenty six other loci associated with serum urate explain a further 3.6% of the variance [@Kottgen2013]. The heritability of serum uric acid ranges from 40 - 70% [@Nath2007; @Yang2005]. This difference in explained variability and total heritability leaves a large component yet to be explained. This missing heritability could be reduced through identifying additional variance attributed to non-additive effects.
 
 <!-- Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003]. -->
 
 There have been multiple genetic loci associated with \gls{t2d} [@Billings2010] and \gls{bmi} [@Locke2015], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for \gls{t2d}. The genes associated with \gls{t2d} have been found to be differentiated by population, however the individual \glspl{snp} are often not [@pickrell2009signals]. @Koh2014 identified six \glspl{snp} in or near nine genes that had been reported as \gls{t2d} associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity don't replicate in the Samoan population [@Karns2012]. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesian populations suggest there is likely to be some population specific variants that are yet to be identified, similar the Polynesian specific variants in _CREBRF_, associated with obesity and protective for \gls{t2d}, identified in Samoans [@Minster2016]. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
 
-The benefits of urate are in line with the categories found to be enriched by selection in genome wide scans. Urate has an anti-oxidant in blood, acting to protect not just erythrocytes but also T and B lymphocites and macrophages [@Ames1981]. Urate has also been hypothesised to have had a survival advantage during the Miocene period, when a series of mutations in urate oxidase is thought to have occurred, leading to elevated urate. \Gls{hu} enables blood pressure to be maintained under low salt dietary conditions [@Watanabe2002]. Serum urate is also a potent anti-oxidant which accounts for >50% of the anti-oxidant activity of the blood [@Glantzounis2005; @Parmar2009]. Later in life elevated serum urate is associated with increased cognitive function [@Euser2009]. Urate also activates the NLRP3 inflammasome which plays an important role in systemic infection and sepsis [@Opitz2009]. The role of urate in these situations show that while \gls{hu} is now considered as contributing to disease, in the past it may have influenced longevity and survival, therefore increasing reproductive success and been a phenotype having undergone selection. 
+The benefits of urate are in line with the categories found to be enriched by selection in genome wide scans. Urate has an anti-oxidant in blood, acting to protect not just erythrocytes but also T and B lymphocytes and macrophages [@Ames1981]. Urate has also been hypothesised to have had a survival advantage during the Miocene period, when a series of mutations in urate oxidase is thought to have occurred, leading to elevated urate. \Gls{hu} enables blood pressure to be maintained under low salt dietary conditions [@Watanabe2002]. Serum urate is also a potent anti-oxidant which accounts for >50% of the anti-oxidant activity of the blood [@Glantzounis2005; @Parmar2009]. Later in life elevated serum urate is associated with increased cognitive function [@Euser2009]. Urate also activates the NLRP3 inflammasome which plays an important role in systemic infection and sepsis [@Opitz2009]. The role of urate in these situations show that while \gls{hu} is now considered as contributing to disease, in the past it may have influenced longevity and survival, therefore increasing reproductive success and been a phenotype having undergone selection. 
 
 Elevated prevalence of metabolic syndrome co-morbidities and hyperuricaemia against a unique genetic background of Polynesian populations provides an important opportunity to study the role and effects that selection might have played on these metabolic conditions.
 
